# bonn-py

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
bonn/: category_manager.py  extract.py  taxonomy.py
python/bonn/: category_manager.py  extract.py
src/: lib.rs
